<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/BasePadding">

    <TextView
        android:id="@+id/label_record"
        style="@style/MainHeaderStyle"
        android:text="@string/record_master"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DefaultHeaderStyle"
        android:layout_marginTop="30dp"
        android:text="@string/service"
        app:layout_constraintTop_toBottomOf="@id/label_record"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/tattoo"
        app:layout_constraintStart_toEndOf="@id/label_service"
        app:layout_constraintTop_toTopOf="@id/label_service"
        app:layout_constraintBottom_toBottomOf="@id/label_service"/>

    <TextView
        android:id="@+id/label_name_tattoo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DefaultHeaderStyle"
        android:layout_marginTop="20dp"
        android:text="@string/name_tattoo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_service"/>

    <TextView
        android:id="@+id/name_tattoo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@tools:sample/first_names"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toEndOf="@id/label_name_tattoo"
        app:layout_constraintTop_toTopOf="@id/label_name_tattoo"
        app:layout_constraintBottom_toBottomOf="@id/label_name_tattoo"/>

    <TextView
        android:id="@+id/label_master"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DefaultHeaderStyle"
        android:layout_marginTop="25dp"
        android:text="@string/Master"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_name_tattoo"/>

    <Spinner
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toEndOf="@id/label_master"
        app:layout_constraintTop_toTopOf="@id/label_master"
        app:layout_constraintBottom_toBottomOf="@id/label_master"/>

    <TextView
        android:id="@+id/label_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DefaultHeaderStyle"
        android:layout_marginTop="25dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_master"/>

    <EditText
        android:id="@+id/data"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:focusable="false"
        android:longClickable="false"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toEndOf="@id/label_data"
        app:layout_constraintTop_toTopOf="@id/label_data"
        app:layout_constraintBottom_toBottomOf="@id/label_data"/>

    <Button
        android:id="@+id/dataButton"
        style="@style/DefaultButtonStyle"
        android:layout_width ="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/select_date"
        app:layout_constraintStart_toEndOf="@id/data"
        app:layout_constraintTop_toTopOf="@id/label_data"
        app:layout_constraintBottom_toBottomOf="@id/label_data"/>

    <Button
        android:id="@+id/buttonRecord"
        style="@style/DefaultButtonStyle"
        android:layout_width ="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>