<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/login_edit"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:hint="@string/login"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/pass_edit"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/Pass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/login_edit"
        app:layout_constraintStart_toStartOf="@+id/login_edit"
        app:layout_constraintTop_toBottomOf="@+id/login_edit" />


    <Button
        android:id="@+id/reg_btn"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/reg_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/auth_bth"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/auth_text"
        app:layout_constraintBottom_toTopOf="@+id/reg_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>