<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/BasePadding">

    <TextView
        android:id="@+id/label_your_sketch"
        style="@style/MainHeaderStyle"
        android:text="@string/label_your_sketch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DefaultHeaderStyle"
        android:layout_marginTop="30dp"
        android:text="@string/image_tattoo"
        app:layout_constraintTop_toBottomOf="@id/label_your_sketch"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/buttonRecord"
        style="@style/DefaultButtonStyle"
        android:layout_width ="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>